--- a/elevation_mapping/package.xml
+++ b/elevation_mapping/package.xml
@@ -14,6 +14,7 @@
 
 <!--   <build_depend>cmake_clang_tools</build_depend> -->
 
+  <depend>arc_cpp</depend>
   <depend>boost</depend>
   <depend>eigen</depend>
   <depend>eigen_conversions</depend>
